<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Instapp</string>
    <string name="login_title">Sign in</string>
    <string name="login_input">Username</string>
    <string name="password_input">Password</string>
    <string name="login_button">Login</string>
    <string name="text_above_login_form">Use your login credentials from Instaling.pl</string>
    <string name="network_error">No internet connection</string>
    <string name="invalid_credentials">Incorrect login credentials</string>
    <string name="unkown_error">An unspecified error has occurred</string>
    <string name="api_host_error">API server is temporarily unavailable</string>
    <string name="start_title">Get started</string>
    <string name="logged_as">Logged in as</string>
    <string name="today_session">Today\'s session is</string>
    <string name="today_session_completed">completed</string>
    <string name="today_session_uncompleted">not completed</string>
    <string name="start_button">Start the session</string>
    <string name="logout_button">Log out</string>
    <string name="fragment_start">Get started</string>
    <string name="fragment_accounts">Accounts</string>
    <string name="fragment_settings">Settings</string>
    <string name="snackbar_session_finished">Session ended</string>
    <string name="snackbar_session_finished_action">Summary</string>
    <string name="solving_title">Complete the sentence</string>
    <string name="translate_text">Translate:</string>
    <string name="your_answer">Your answer</string>
    <string name="send_answer">Send answer</string>
    <string name="solving_finished">Session ended</string>
    <string name="summary_answer">Answer:</string>
    <string name="full_text">Entire sentence:</string>
    <string name="continue_button">Continue</string>
    <string name="reportSucess">Thank you for sending the error message</string>
    <string name="reportFailure">Error reporting is temporarily impossible</string>
    <string name="clipboardLabel">Error</string>
    <string name="snackbarDetails">Details</string>
    <string name="reportDialogCancel">Cancel</string>
    <string name="reportDialogCopy">Copy</string>
    <string name="reportDialogReport">Report a bug</string>
    <string name="reportDialogCopySuccess">Error copied to clipboard</string>
    <string name="bottombar_start">Start</string>
    <string name="bottombar_settings">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_language">Language</string>
    <string name="settings_moreInfo">Extra information</string>
    <string name="instaling_version">Instaling.pl version:</string>
    <string name="settings_language_system">System language</string>
    <string name="settings_theme_system">System theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_language_english" translatable="false">English</string>
    <string name="settings_language_polish" translatable="false">Polski</string>
    <string name="summary_dialog_title">Session summary</string>
    <string name="summary_dialog_for">for</string>
    <string name="summary_dialog_working_days">Working days:</string>
    <string name="summary_dialog_words">Correct words:</string>
    <string name="extra_info_repo">Github repository</string>
    <string name="extra_info_discord">Discord server</string>
    <string name="extra_info_app_version">App version</string>
    <string name="extra_info_instaling_version">Version of Instaling.pl site</string>
    <string name="extra_info_api_version">API version</string>
    <string name="grades_good">Good</string>
    <string name="grades_incorrect">Incorrect</string>
    <string name="grades_synonym">Synonym</string>
    <string name="grades_typo">Typo</string>
    <string name="grades_letter_case">Wrong letter case</string>
    <string name="extra_info_crowdin">Crowdin translations</string>
    <string name="change_lang_help_us">If you would like to help us translate the app into more languages, visit Crowdin translations</string>
    <string name="settings_theme_restart_required">To apply the new settings, it is required to restart the application</string>
    <string name="settings_restart_required_title">Application restart</string>
    <string name="settings_restart_now">Restart now</string>
    <string name="settings_restart_later">Later</string>
    <string name="bottombar_homeworks">Homework</string>
    <string name="homeworks_notfound">No homework assignments</string>
    <string name="settings_language_turkish" translatable="false">Türkçe</string>
    <string name="homework_exercise">Exercise:</string>
    <string name="homework_term">Term:</string>
    <string name="homework_grade">Grade:</string>
    <string name="homework_no_grade">No grade</string>
    <string name="bottombar_homeworks_summary">Homework details</string>
    <string name="homework_completed">Homework completed!</string>
    <string name="homework_saved">Answer saved!</string>
    <string name="homework_dialog_message">Are you sure you want to submit your finished work? You will no longer be able to edit it</string>
    <string name="homework_dialog_title">Confirm homework</string>
    <string name="homework_information">You can edit your work up to the final term set by your teacher (it will be sent automatically when it has passed) or send your work if it is already finished.</string>
    <string name="homework_received_grade">Grade received:</string>
    <string name="homework_note">Note from teacher:</string>
    <string name="homework_send">Send</string>
    <string name="homework_save">Save</string>
    <string name="homework_your_answer">Your answer:</string>
    <string name="topbar_account_manager">Account manager</string>
    <string name="topbar_refresh">Refresh homeworks</string>
    <string name="additional_learning_materials">Additional learning material</string>
    <string name="additional_learning_material_view">Go to additional material</string>
    <string name="homework_dialog_confirm">Confirm</string>
    <string name="settings_language_ukrainian" translatable="false">Українська</string>
</resources>