<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userinterface"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tab_layout">

        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_baseline_home_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_start"/>
        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_baseline_person_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_accounts"/>
        <com.google.android.material.tabs.TabItem
            android:icon="@drawable/ic_baseline_settings_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_pager"
        android:layout_below="@+id/tab_layout"/>
</RelativeLayout>