<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.Start">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        android:scaleX="-0.3"
        android:scaleY="-0.3"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/start_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:strokeWidth="0dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.HeadlineLarge"
                    android:id="@+id/loginTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/start_title"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="137dp"
                    tools:layout_editor_absoluteY="206dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginVertical="5dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginEnd="4dp"
                        android:text="@string/logged_as"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginVertical="5dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginEnd="4dp"
                        android:text="@string/today_session"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/sessionStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    app:icon="@drawable/ic_baseline_keyboard_double_arrow_right_24"
                    android:text="@string/start_button"
                    app:iconGravity="end"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:backgroundTint="@color/logoutButton"
                    android:id="@+id/logoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    app:iconGravity="end"
                    app:icon="@drawable/ic_baseline_logout_24"
                    android:text="@string/logout_button"
                    android:textSize="18sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>