<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:elevation="20dp"
        android:indeterminateTint="@color/textColor"
        android:scaleX="-0.3"
        android:scaleY="-0.3"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/sendAnswer"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            android:layout_below="@+id/imageContainer"
            app:cardElevation="10dp"
            app:cardBackgroundColor="?attr/colorSecondary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/solving_title"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="40dp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="137dp"
                    tools:layout_editor_absoluteY="206dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginVertical="5dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginRight="4dp"
                        android:text="@string/translate_text"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/translations"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="word"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/translateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Tutaj powinno pojawić się zdanie"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/answer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:layout_marginVertical="12dp"
                    android:background="@drawable/edittext"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_baseline_keyboard_double_arrow_right_24"
                    android:inputType="textPersonName"
                    android:hint="@string/your_answer"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sendAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/light_red"
                    android:text="@string/send_answer"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:cornerRadius="20dp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>
</LinearLayout>